Bug fixes and CSS

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
 
+
+#ROOT
+android-chrome-192x192.png
+android-chrome-512x512.png
+apple-touch-icon.png
+favicon-16x16.png
+favicon-32x32.png
+favicon.ico
+package-lock.json
+.htaccess
+PW.txt
+
+#PHP
 php/dbConnection.php
 php/apikeys.php
 
